// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Layout for the "/dashboard" view 1`] = `

<div class="flex flex-col min-h-svh w-full">
  <div class="flex flex-row min-h-svh w-full">
    <div>
      Mock Sidebar
    </div>
    <div class="flex flex-col grow w-full">
      <div>
        Mock Header
      </div>
      <div>
        Mock Dashboard
      </div>
      <div>
        Mock Footer
      </div>
    </div>
  </div>
</div>

`;

exports[`renders Layout for the "/error" view 1`] = `

<div class="flex flex-col min-h-svh w-full">
  <div class="flex flex-row min-h-svh w-full">
    <div>
      Mock Sidebar
    </div>
    <div class="flex flex-col grow w-full">
      <div>
        Mock Header
      </div>
      <div>
        Mock Error Found
      </div>
      <div>
        Mock Footer
      </div>
    </div>
  </div>
</div>

`;

exports[`renders Layout for the "/explore" view 1`] = `

<div class="flex flex-col min-h-svh w-full">
  <div class="flex flex-row min-h-svh w-full">
    <div>
      Mock Sidebar
    </div>
    <div class="flex flex-col grow w-full">
      <div>
        Mock Header
      </div>
      <div>
        Mock Explorer
      </div>
      <div>
        Mock Footer
      </div>
    </div>
  </div>
</div>

`;
